--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">portifolio</a>
+            <a class="navbar-brand" href="#/">Portifolio</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -54,7 +54,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team AHAHAHA</p>
       </div>
     </div>
 
