--- a/app/index.html
+++ b/app/index.html
@@ -39,13 +39,11 @@
   <script src="bower_components/angular-messages/angular-messages.min.js"></script>
   <script src="bower_components/angular-aria/angular-aria.min.js"></script>
   <script src="bower_components/angular-material/angular-material.min.js"></script>
-  <script src="app.js"></script> 
-  <script src="slides-component/slides.component.js"></script>
-   <script src="slides-component/slide.service.js"></script
+  <script src="scripts/app.js"></script> 
+  <script src="scripts/controllers/slides.component.js"></script>
+   <script src="scripts/services/slide.service.js"></script>
  
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
+
 </body>
 
 </html>
